@@ -7,5 +7,6 @@
 &package_ebuild_eapi_0;
 &package_ebuild_eapi_1;
 &package_ebuild_eapi_2;
+&package_ebuild_eapi_3;
 </section>
 </chapter>
