@@ -18,6 +18,7 @@
 	<!ENTITY package_ebuild_eapi_0 SYSTEM "package/ebuild/eapi/0.docbook">
 	<!ENTITY package_ebuild_eapi_1 SYSTEM "package/ebuild/eapi/1.docbook">
 	<!ENTITY package_ebuild_eapi_2 SYSTEM "package/ebuild/eapi/2.docbook">
+	<!ENTITY package_ebuild_eapi_3 SYSTEM "package/ebuild/eapi/3.docbook">
 	<!ENTITY qa SYSTEM "qa.docbook">
 	<!ENTITY config SYSTEM "config.docbook">
 	<!ENTITY config_bashrc SYSTEM "config/bashrc.docbook">
