@@ -2873,12 +2873,9 @@ class EbuildExecuter(CompositeTask):
 		pkg = self.pkg
 		phases = self._phases
 		eapi = pkg.metadata["EAPI"].replace(EAPIPREFIX, "").strip()
-		if eapi in ("0", "1", "2_pre1"):
+		if eapi in ("0", "1"):
 			# skip src_prepare and src_configure
 			phases = phases[2:]
-		elif eapi in ("2_pre2",):
-			# skip src_prepare
-			phases = phases[1:]
 
 		for phase in phases:
 			ebuild_phases.add(EbuildPhase(background=self.background,
@@ -5148,7 +5145,8 @@ class depgraph(object):
 				vardb = self.roots[dep_root].trees["vartree"].dbapi
 				try:
 					selected_atoms = self._select_atoms(dep_root,
-						dep_string, myuse=myuse, parent=pkg, strict=strict)
+						dep_string, myuse=myuse, parent=pkg, strict=strict,
+						priority=dep_priority)
 				except portage.exception.InvalidDependString, e:
 					show_invalid_depstring_notice(jbigkey, dep_string, str(e))
 					return 0
@@ -5781,12 +5779,20 @@ class depgraph(object):
 		return self._select_atoms_highest_available(*pargs, **kwargs)
 
 	def _select_atoms_highest_available(self, root, depstring,
-		myuse=None, parent=None, strict=True, trees=None):
+		myuse=None, parent=None, strict=True, trees=None, priority=None):
 		"""This will raise InvalidDependString if necessary. If trees is
 		None then self._filtered_trees is used."""
 		pkgsettings = self.pkgsettings[root]
 		if trees is None:
 			trees = self._filtered_trees
+		if not getattr(priority, "buildtime", False):
+			# The parent should only be passed to dep_check() for buildtime
+			# dependencies since that's the only case when it's appropriate
+			# to trigger the circular dependency avoidance code which uses it.
+			# It's important not to trigger the same circular dependency
+			# avoidance code for runtime dependencies since it's not needed
+			# and it can promote an incorrect package choice.
+			parent = None
 		if True:
 			try:
 				if parent is not None:
@@ -6887,6 +6893,41 @@ class depgraph(object):
 			runtime_deps.update(atom for atom in portage_rdepend \
 				if not atom.startswith("!"))
 
+		def gather_deps(ignore_priority, mergeable_nodes,
+			selected_nodes, node):
+			"""
+			Recursively gather a group of nodes that RDEPEND on
+			eachother. This ensures that they are merged as a group
+			and get their RDEPENDs satisfied as soon as possible.
+			"""
+			if node in selected_nodes:
+				return True
+			if node not in mergeable_nodes:
+				return False
+			if node == replacement_portage and \
+				mygraph.child_nodes(node,
+				ignore_priority=DepPriority.MEDIUM_SOFT):
+				# Make sure that portage always has all of it's
+				# RDEPENDs installed first.
+				return False
+			selected_nodes.add(node)
+			for child in mygraph.child_nodes(node,
+				ignore_priority=ignore_priority):
+				if not gather_deps(ignore_priority,
+					mergeable_nodes, selected_nodes, child):
+					return False
+			return True
+
+		def ignore_uninst_or_med(priority):
+			if priority is BlockerDepPriority.instance:
+				return True
+			return priority <= DepPriority.MEDIUM
+
+		def ignore_uninst_or_med_soft(priority):
+			if priority is BlockerDepPriority.instance:
+				return True
+			return priority <= DepPriority.MEDIUM_SOFT
+
 		ignore_priority_soft_range = [None]
 		ignore_priority_soft_range.extend(
 			xrange(DepPriority.MIN, DepPriority.MEDIUM_SOFT + 1))
@@ -6965,28 +7006,6 @@ class depgraph(object):
 			if not selected_nodes:
 				nodes = get_nodes(ignore_priority=DepPriority.MEDIUM)
 				if nodes:
-					"""Recursively gather a group of nodes that RDEPEND on
-					eachother.  This ensures that they are merged as a group
-					and get their RDEPENDs satisfied as soon as possible."""
-					def gather_deps(ignore_priority,
-						mergeable_nodes, selected_nodes, node):
-						if node in selected_nodes:
-							return True
-						if node not in mergeable_nodes:
-							return False
-						if node == replacement_portage and \
-							mygraph.child_nodes(node,
-							ignore_priority=DepPriority.MEDIUM_SOFT):
-							# Make sure that portage always has all of it's
-							# RDEPENDs installed first.
-							return False
-						selected_nodes.add(node)
-						for child in mygraph.child_nodes(node,
-							ignore_priority=ignore_priority):
-							if not gather_deps(ignore_priority,
-								mergeable_nodes, selected_nodes, child):
-								return False
-						return True
 					mergeable_nodes = set(nodes)
 					if prefer_asap and asap_nodes:
 						nodes = asap_nodes
@@ -7044,6 +7063,10 @@ class depgraph(object):
 			if not selected_nodes and not myblocker_uninstalls.is_empty():
 				# An Uninstall task needs to be executed in order to
 				# avoid conflict if possible.
+
+				mergeable_nodes = get_nodes(
+					ignore_priority=ignore_uninst_or_med)
+
 				min_parent_deps = None
 				uninst_task = None
 				for task in myblocker_uninstalls.leaf_nodes():
@@ -7169,10 +7192,19 @@ class depgraph(object):
 					# best possible choice, but the current algorithm
 					# is simple and should be near optimal for most
 					# common cases.
+					mergeable_parent = False
 					parent_deps = set()
 					for parent in mygraph.parent_nodes(task):
 						parent_deps.update(mygraph.child_nodes(parent,
 							ignore_priority=DepPriority.MEDIUM_SOFT))
+						if parent in mergeable_nodes and \
+							gather_deps(ignore_uninst_or_med_soft,
+							mergeable_nodes, set(), parent):
+							mergeable_parent = True
+
+					if not mergeable_parent:
+						continue
+
 					parent_deps.remove(task)
 					if min_parent_deps is None or \
 						len(parent_deps) < min_parent_deps:
@@ -10076,6 +10108,9 @@ class Scheduler(PollScheduler):
 		"""
 		cpv_map = {}
 		for pkg in self._mergelist:
+			if not isinstance(pkg, Package):
+				# a satisfied blocker
+				continue
 			if pkg.installed:
 				continue
 			if pkg.cpv not in cpv_map:
